--- a/CyclistClub.BO/CyclistClub.BO.csproj
+++ b/CyclistClub.BO/CyclistClub.BO.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>f5272b1a-b429-4fe5-af5a-0e60a826e39c</ProjectGuid>
+    <ProjectGuid>{F5272B1A-B429-4FE5-AF5A-0E60A826E39C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CyclistClub.BO</RootNamespace>
@@ -31,24 +31,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Balade.cs" />
+    <Compile Include="BaseModel.cs" />
+    <Compile Include="Categorie.cs" />
+    <Compile Include="Cotisation.cs" />
+    <Compile Include="Covoiturage.cs" />
+    <Compile Include="Cyclo.cs" />
+    <Compile Include="Decendeur.cs" />
+    <Compile Include="Inscription.cs" />
+    <Compile Include="Membres.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Randoneur.cs" />
+    <Compile Include="Reservation.cs" />
+    <Compile Include="Trialistes.cs" />
+    <Compile Include="Vit.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
