--- a/CyclistClub.WPF/App.config
+++ b/CyclistClub.WPF/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
     </startup>
+  <connectionStrings>
+    <add name="SqlServer" connectionString="Server=localhost\SQLEXPRESS;uid=sa;pwd=root;database=db1" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
