--- a/CyclistClub.DAL/CyclistClub.DAL.csproj
+++ b/CyclistClub.DAL/CyclistClub.DAL.csproj
@@ -42,13 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaladeRepository.cs" />
     <Compile Include="BaseRepository.cs" />
     <Compile Include="CotisationRepository.cs" />
     <Compile Include="DbConnector.cs" />
     <Compile Include="MembreRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecapitulatifRepository.cs" />
     <Compile Include="ReservationRepository.cs" />
-    <Compile Include="Sql.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CyclistClub.DB\main.sql" />
