--- a/CyclistClub.BLL/CyclistClub.BLL.csproj
+++ b/CyclistClub.BLL/CyclistClub.BLL.csproj
@@ -41,11 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaladeManager.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="CotisationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MemberManager.cs" />
     <Compile Include="RecapitulatifManager.cs" />
+    <Compile Include="ReservationManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CyclistClub.BO\CyclistClub.BO.csproj">
